Removed custom document.domain

--- a/ckeditor_scayt/index.html
+++ b/ckeditor_scayt/index.html
@@ -10,7 +10,7 @@
 	<script>
 		window.onload = function() {
 			window.CKEDITOR_BASEPATH = '/ckeditor_scayt/CKEditor/';
-			document.domain = 'github.io';
+			//document.domain = 'github.io';
 			CKEDITOR.replace('ckeditor');
 		};
 	</script>	
