Fixed document.domain and customConfig

--- a/ckeditor_scayt/index.html
+++ b/ckeditor_scayt/index.html
@@ -10,8 +10,8 @@
 	<script>
 		window.onload = function() {
 			window.CKEDITOR_BASEPATH = '/ckeditor_scayt/CKEditor/';
-			//document.domain = 'github.io';
-			CKEDITOR.replace('ckeditor');
+			document.domain = 'oryol.github.io'
+			CKEDITOR.replace('ckeditor', {customConfig: ''});
 		};
 	</script>	
 </body>
